# Changelog

This document describes the stages of life this pack has experienced.

---

## **Revision 2 - Cardboard** (Latest, W.I.P)

- Resource Pack v1.0.1
- Behavior Pack v1.0.1
- World Template v1.0.0 (TBD)

---

## Revision 1 - Initial Creation

Bundled within:
- Resource Pack v1.0.0
- Behavior Pack v1.0.0
- World Template v1.0.0

### This Damned Cube
- Added entity behavior, appearance, and resources to make it tick.
- Does nothing.
- Has cat ears