@@ -2,5 +2,7 @@ pack.name=What the Pack (Resources)
 pack.description=Beyond compression. This is just the resources! Add the Behavior Pack!
 
 entity.what:this_damned_cube.name=This Damned Cube
+entity.what:cardboard_box.name=Cardboard Box
 
 item.spawn_egg.entity.what:this_damned_cube.name=Spawn Damned Cube
+item.spawn_egg.entity.what:cardboard_box.name=Spawn Cardboard Box
