@@ -10,6 +10,10 @@ This document describes the stages of life this pack has experienced.
 - Behavior Pack v1.0.1
 - World Template v1.0.0 (TBD)
 
+### Cardboard Box
+- Walks around.
+- Looks like a cardboard box used for shipping.
+
 ---
 
 ## Revision 1 - Initial Creation
